SERVER-56819 Make indexOfCP's classic engine impl always return -1 when end is less than start

(cherry picked from commit 934d6de41bb3adbecee23e3837852e29c7ff4af6)